tests/should_fail/bug/1610-crash.stderr
error[E0277]: the trait bound `B: creusot_std::prelude::FromIteratorSpec<()>` is not satisfied
  --> 1610-crash.rs:14:9
   |
14 |         std::iter::empty().collect()
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `creusot_std::prelude::FromIteratorSpec<()>` is not implemented for `B`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
